Fixed artwork credit

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </button>
             </div>
         </div>
-        <!-- <div class="credits">
+        <div class="credits">
             Artwork by: nisikm (弐色)
-        </div> -->
+        </div>
     </div>
     
     <script src="assets/index.js"></script>
