New features such as custom avatar, reset benefits and more

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
           </div>
         </div>
       </div>
-
       <div class="main">
         <div class="profile">
-          <div class="picture"></div>
+          <div class="picture-area">
+            <div class="picture" id="profile-picture"></div>
+            <input type="file" id="file-input" style="display: none" />
+            <label for="file-input" class="upload-btn">New Avatar</label>
+          </div>
           <div class="stats">
             <div class="header">
               <h1>STATS</h1>
@@ -69,6 +72,7 @@
           </div>
         </div>
       </div>
+
       <div class="secondary">
         <div class="buttons">
           <button class="reset">
